src/objects/Principal_In_Charge__c.object
<CustomObject>
    <description>List of users who are qualified to function as Principal In Charge on Opportunity, or as Bid Team members on the Opportunity Line Item.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Text(User__r.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offering_Type__c</fullName>
        <description>Offering type derived from the global product defined for this employee in PeopleSoft</description>
        <formula>TEXT(User__r.PeopleSoft_Product_Offering_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Offering type derived from the global product defined for this employee in PeopleSoft</inlineHelpText>
        <label>Offering Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Entity__c</fullName>
        <description>Copied from User record</description>
        <label>PIC Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cambridge (CAM)</fullName>
                </value>
                <value>
                    <fullName>Core (COR)</fullName>
                </value>
                <value>
                    <fullName>Fricke &amp; Pirk (FP)</fullName>
                </value>
                <value>
                    <fullName>Harewood (HW)</fullName>
                </value>
                <value>
                    <fullName>HEDM</fullName>
                </value>
                <value>
                    <fullName>HORE (HOR)</fullName>
                </value>
                <value>
                    <fullName>LOCAL (LOC)</fullName>
                </value>
                <value>
                    <fullName>LSCM</fullName>
                </value>
                <value>
                    <fullName>M&amp;H</fullName>
                </value>
                <value>
                    <fullName>Med Radar (MR)</fullName>
                </value>
                <value>
                    <fullName>Merlin (MLN)</fullName>
                </value>
                <value>
                    <fullName>M-TAG (MTG)</fullName>
                </value>
                <value>
                    <fullName>Other HEOR (HE)</fullName>
                </value>
                <value>
                    <fullName>Other IM (IM)</fullName>
                </value>
                <value>
                    <fullName>Merg (MRG)</fullName>
                </value>
                <value>
                    <fullName>PharMetric (PHA)</fullName>
                </value>
                <value>
                    <fullName>Pitre (PTR)</fullName>
                </value>
                <value>
                    <fullName>Groupe PR (PR)</fullName>
                </value>
                <value>
                    <fullName>Regional OH (ROH)</fullName>
                </value>
                <value>
                    <fullName>SAI</fullName>
                </value>
                <value>
                    <fullName>SDG</fullName>
                </value>
                <value>
                    <fullName>Taskarena</fullName>
                </value>
                <value>
                    <fullName>Fourth Hurdle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PIC_Sales_Org__c</fullName>
        <description>Copied from User record</description>
        <label>PIC Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acceletra</fullName>
                </value>
                <value>
                    <fullName>Areks France</fullName>
                </value>
                <value>
                    <fullName>Cambridge Pharma UK</fullName>
                </value>
                <value>
                    <fullName>Cambridge Pharma US</fullName>
                </value>
                <value>
                    <fullName>CORE Center</fullName>
                </value>
                <value>
                    <fullName>CORE Holding</fullName>
                </value>
                <value>
                    <fullName>Fourth Hurdle</fullName>
                </value>
                <value>
                    <fullName>Health Outcomes Research</fullName>
                </value>
                <value>
                    <fullName>HEDM Belgium</fullName>
                </value>
                <value>
                    <fullName>IHA, IMS Health Hergiswil</fullName>
                </value>
                <value>
                    <fullName>IMS AG Switzerland</fullName>
                </value>
                <value>
                    <fullName>IMS America</fullName>
                </value>
                <value>
                    <fullName>IMS Austria</fullName>
                </value>
                <value>
                    <fullName>IMS Belgium</fullName>
                </value>
                <value>
                    <fullName>IMS Czech</fullName>
                </value>
                <value>
                    <fullName>IMS France</fullName>
                </value>
                <value>
                    <fullName>IMS Germany</fullName>
                </value>
                <value>
                    <fullName>IMS Health Asia Pte Ltd - SG01</fullName>
                </value>
                <value>
                    <fullName>IMS Health Canada Consulting</fullName>
                </value>
                <value>
                    <fullName>IMS Health Ireland</fullName>
                </value>
                <value>
                    <fullName>IMS Health Netherlands BV</fullName>
                </value>
                <value>
                    <fullName>IMS Health UK Ltd</fullName>
                </value>
                <value>
                    <fullName>IMS Health US</fullName>
                </value>
                <value>
                    <fullName>IMS Health US (SAI)</fullName>
                </value>
                <value>
                    <fullName>IMS Health US - Envision</fullName>
                </value>
                <value>
                    <fullName>IMS Health US - RKG</fullName>
                </value>
                <value>
                    <fullName>IMS Hellas Greece</fullName>
                </value>
                <value>
                    <fullName>IMS Hospital UK</fullName>
                </value>
                <value>
                    <fullName>IMS Hungary</fullName>
                </value>
                <value>
                    <fullName>IMS Italy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PseResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The PIC resource used for PSE that&apos;s related to this PIC.</description>
        <inlineHelpText>The PIC resource used for PSE that&apos;s related to this PIC.</inlineHelpText>
        <label>PSA Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Principal In Charge</relationshipLabel>
        <relationshipName>Principal_In_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to original User record.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001hHjXEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Principal In Charge</label>
    <nameField>
        <label>PIC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Principal In Charge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>